Disable date word-wrap, fixes #68

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,9 @@ a {
 	padding: 4px;
 }
 
+tr.torrent-info td.date {
+	white-space: nowrap;
+}
 
 .custom-table-hover > tbody > tr:hover {
 	opacity: 0.82;
@@ -100,4 +103,3 @@ div.container div.blockBody:nth-of-type(2) table tr:first-of-type th:first-of-ty
 div.container div.blockBody:nth-of-type(2) table tr:first-of-type th:nth-of-type(3){width:15%;}
 div.container div.blockBody:nth-of-type(2) table tr:first-of-type th:nth-of-type(4){width:19%;}
 div.container div.blockBody:nth-of-type(2) table tr:first-of-type th:last-of-type{width:6%;}
-tr.torrent-info td.hash,tr.torrent-info td.date{word-wrap:break-word;}
